--- a/index.html
+++ b/index.html
@@ -1,35 +1,86 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<!doctype HTML>
-<html lang="en-US">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Nicola Povia</title>
+        <title>Il mio curriculum</title>
     </head>
-
     <body>
-        <h1>Questo è il porfolio di Nicola Povia</h1>
-        <h2>Macchinista</h2>
+        <h1>Chi sono?</h1>
+        <img src="./assets/images/pic.jpeg" height="200"/>
+        <p>Ciao, mi chiamo Nicola Povia. Sono un ragazzo di 25 anni e dal 2020 svolgo la professione 
+           di Macchinista per Trenitalia presso l'impianto Intercity di Bari. Abituato a lavorare sotto pressione, 
+           gestisco con efficienza e precisione carichi di responsabilità elevati, garantendo sempre la 
+           massima sicurezza e puntualità. <br />
+           La mia capacità di lavorare in team è dimostrata dalla collaborazione costante con 
+           le varie figure che compongono i complessi ingranaggi del mondo ferroviario,
+           con i quali mi coordino per offrire un servizio di alta qualità ai passeggeri. 
+           Sono fortemente motivato e dedicato a mantenere standard di eccellenza nel mio lavoro quotidiano, 
+           contribuendo così al buon funzionamento dell'intera rete ferroviaria. 
+        </p>
         <hr />
-        <h3><a href=".\public\movie.html">Movie Ranking Project</a> </h3>
-        <img src=".\assets\images\movie.png" height="200"/>
-
-        <h3><a href=".\public\birthday.html">Birthday Invite</a></h3>
-        <img src=".\assets\images\birthday.png" height="200"/>
-        <hr />
-        <a href=".\public\about.html">About me</a>
-        <a href=".\public\contact.html">Contact me</a>
-    </body>
+        <h2> Istruzione</h2>
+        <ol>
+            <li>
+                <p>
+                    <h3>Università degli Studi di Bari Aldo Moro | Bari<br/>
+                    2017 - 2019 (sospeso)</h3>
+                </p>
+                <h4>Competenze acquisite</h4>
+                <p>
+                    Durante il mio percorso di studi presso il corso di laurea in Informatica, ho affinato e 
+                    ampliato le competenze acquisite nel corso del diploma in Informatica, in particolar modo
+                    ho ampliato le mie competenze in:
+                </p>
+                <ul>
+                    <li>Studio e utilizzo delle strutture dati</li>
+                    <li>Pratica con linguaggi di programmazione quali C++ e Java</li>
+                    <li>Miglioramento della stesura di algoritmi con attenzione alla complessità e all'ottimizzazione dell'uso delle risorse</li>
+                </ul>
+                <p>Nel 2019 il corso di laurea è stato sospeso al fine di concentrarmi sul percorso lavorativo come macchinista e ai numerosi esami che questo comportava. </p>
+            </li> 
+            <li>
+                <p>
+                    <h3>I.I.S.S. "G. Ferraris" | Molfetta <br />
+                        2012 - 2017<br/>
+                        Diploma di perito informatico 92/100</h3>
+                </p>
+                <h4>Competenze acquisite</h4>
+                <p>
+                    Durante il mio percorso di studi presso l’I.I.S.S. “Galileo Ferraris”, ho acquisito diverse competenze 
+                    nel mondo informatico: dall’analisi di algoritmi e strutture dati, allo studio dei modelli entità - relazioni e la creazione di database,
+                    fino alla creazione di codice attraverso diversi linguaggi di programmazione
+                </p>
+                <ul>
+                    <li>Analisi, progettazione e implementazione di diversi algoritmi</li>
+                    <li>Buona conoscenza di linguaggi di programmazione come C, JAVA, Javascript, Php</li>
+                    <li>Analisi e creazione di modelli E/R e loro gestione attraverso mySQL</li>
+                    <li>Padronanza del pacchetto office</li>
+                </ul>
+            </li>
+        </ol>
+        <h2>Esperienze lavorative</h2>
+        <h4>Agente di condotta<br/> 
+            Trenitalia<br/>
+            2020 - in corso </h4>
+        <p>
+            Dal 2020 svolgo la mansione di operatore di condotta presso la divisione Intercity di Trenitalia,
+            questo mi ha permesso di sviluppare diverse competenze come:
+        </p>
+        <ul>
+            <li>Capacità di lavorare in team</li>
+            <li>Capacità di lavorare sottopressione</li>
+            <li>Capacità di lavorare sotto grossi carichi di responsabilità</li>
+            <li>Capacità di risoluzione di avarie e anormalità nel minor tempo possibile e con la massima lucidità</li>
+        </ul>
+        <h4>Sviluppatore pagine web<br/>
+        Nealogic</h4>    
+        <p>
+            Durante l'anno scolastico 2015 - 2016, per il progetto di alternanza scuola - lavoro ho svolto la mansione
+            di sviluppatore di pagine web per la suddetta azienda
+        </p>
+        
+     </body>
+     <footer>
+        <p>© 2024 Nicola Povia</p>
+      </footer>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
